# tributary

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  drag.ts  ipc.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: error.rs  lib.rs  main.rs  model.rs  state.rs
src-tauri/src/commands/: auth.rs  events.rs  mod.rs  mrs.rs  rules.rs  settings.rs
src-tauri/src/gitlab/: mod.rs
src-tauri/src/tray/: mod.rs
src/components/: ActivityFeed.tsx  Glass.tsx  Logo.tsx  MRCard.tsx  MRDetail.tsx  SettingsDrawer.tsx  SetupWizard.tsx  Sidebar.tsx  SubscribeModal.tsx  Toast.tsx  TopBar.tsx  Wallpaper.tsx  icons.tsx  ui.tsx
src/store/: index.ts
src/styles/: globals.css  tokens.css
