[package]
name = "tributary"
version = "0.1.2"
description = "Tributary — MR notification center"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tributary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tributary"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                      = { version = "2", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-shell         = "2"
tauri-plugin-notification  = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state  = "2"
tauri-plugin-updater       = "2"
tauri-plugin-process       = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring     = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1", features = ["v4"] }
anyhow      = "1"
thiserror   = "1"
log         = "0.4"
env_logger  = "0.11"
window-vibrancy = "0.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

[profile.release]
panic    = "abort"
codegen-units = 1
lto      = true
opt-level = "s"
strip    = true
